--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,10 +1,10 @@
 {
   "pages": [
-    "pages/setting/setting",
-    "pages/coupon/coupon",
-    "pages/mine/mine",
-    "pages/detail/detail",
     "pages/home/home",
+    "pages/detail/edit",
+    "pages/detail/detail",
+    "pages/mine/mine",
+    "pages/coupon/coupon",
     "pages/show/show"
   ],
   "window": {
