--- a/project.config.json
+++ b/project.config.json
@@ -2,11 +2,13 @@
 	"miniprogramRoot": "miniprogram/",
 	"cloudfunctionRoot": "cloudfunctions/",
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
-		"newFeature": true
+		"newFeature": true,
+		"autoAudits": false,
+		"checkInvalidKey": true
 	},
 	"appid": "wx75068f05d753bdda",
 	"projectname": "%E7%BE%8E%E4%B8%BD%E7%A7%81%E4%BA%BA%E8%AE%A2%E5%88%B6",
